# cognitive-discovery-system

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.docx  README.md  ROADMAP.md  SECURITY.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup_repo.sh  sitemap.xml  snippet_0.py  snippet_1.py  snippet_2.py  snippet_3.py  snippet_4.py  snippet_5.py  snippet_6.py  snippet_7.py  snippet_8.py  snippet_9.py
.binder/: postBuild  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: attest.yml  benchmarks.yml  bot-reviewer.yml  changelog.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  pages.yml  pr-automation.yml  pypi-publish.yml  release.yml  tests.yml
ARCHITECTURE/: index.html
CASE_STUDY_HUBBLE/: index.html
CASE_STUDY_QUANTUM_ML/: index.html
api/: index.html
benchmarks/: index.html  results.json  run_benchmarks.py
cookbook/: index.html
dashboard/: app.py
docs/: ARCHITECTURE.md  CASE_STUDY_HUBBLE.md  CASE_STUDY_QUANTUM_ML.md  api-reference.md  api.md  benchmarks.md  cookbook.md  getting-started.md  getting-started.tr.md  index.md  maintenance.md  mathematical-examples.md  research-workflows.md  tour_of_numerical_methods.md
docs/marketing/: LAUNCH_POSTS_FINAL.md  NEW_COMMUNITY_POSTS.md  POSTING_TRACKER.md  REDDIT_MASTER_POST_TEMPLATE.md  REDDIT_RECOVERY_GUIDE.md  VIDEO_POSTS.md
docs/superpowers/plans/: 2026-06-18-A-doc-examples.md  2026-06-18-B-api-reference.md  2026-06-18-C-coverage.md  2026-06-18-D-nlp-visualisation.md  2026-06-18-E-ci-benchmarks.md
docs/superpowers/specs/: 2026-06-18-project-completion-design.md
docs/tutorials/: core_demo.md  data_analysis_demo.md  diffeq_demo.md  fft2_demo.md  graph_demo.md  hypothesis_demo.md  hypothesis_tests_demo.md  hypothesis_with_stats_demo.md  knowledge_demo.md  linalg_demo.md  math_utils_demo.md  ml_and_viz_demo.md  ml_demo.md  modeling_demo.md  montecarlo_demo.md  nlp_attention_demo.md  nlp_bpe_demo.md  nlp_mini_gpt_demo.md  nlp_viz.md  numerical_integration_demo.md  optimization_demo.md  pandas_io_demo.md  probability_demo.md  quantum_demo.md  quick_start.md  scientific_demo.md  signals_demo.md  stats_demo.md  time_series_demo.md
examples/: _demo_tokenizer.json  core_demo.py  data_analysis_demo.py  diffeq_demo.py  fft2_demo.py  graph_demo.py  hypothesis_custom_generator.py  hypothesis_demo.py  hypothesis_tests_demo.py  hypothesis_with_stats_demo.py  knowledge_demo.py  linalg_demo.py  math_utils_demo.py  ml_and_viz_demo.py  modeling_demo.py  montecarlo_demo.py  nlp_attention_demo.py  nlp_bpe_demo.py  nlp_mini_gpt_demo.py  nlp_viz_demo.py  numerical_integration_demo.py  optimization_demo.py  plot_demo.py  plotting_notebook.ipynb  probability_demo.py  quantum_demo.py  rba_research_demo.py  scientific_demo.py  signals_demo.py  stats_demo.py  tour_of_numerical_methods.ipynb
getting-started/: index.html
getting-started.tr/: index.html
maintenance/: index.html
notebooks/: hypothesis_demo.ipynb  quantum_demo.ipynb  quick_start.ipynb
research-workflows/: index.html
scripts/: build_gif.py  build_video.py  cleanup_deployments.py  crop_readme_png.py  make_pi_dashboard.py  make_pi_gif.py  publish.ps1  publish.py  render_promo.mjs  render_readme.py  render_readme_sections.py  verify_cookbook.py  verify_d1_numerics.py  verify_d2_edge_cases.py  verify_d4_hypothesis.py
search/: search_index.json
src/cds/: __init__.py  __main__.py  _version.py  cli.py  concept_map.py  example.py  hypothesis.py  modeling.py  notes.py
src/cds/agents/: __init__.py
src/cds/core/: __init__.py  _numeric.py  models.py
src/cds/data_analysis/: __init__.py  dataset.py  loader.py  pandas_io.py  transform.py  viz.py
src/cds/diffeq/: __init__.py  solvers.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_cli_color.py  test_cli_extended.py  test_concept_map.py  test_core.py  test_coverage_boost.py  test_coverage_complete.py  test_coverage_final.py  test_coverage_gaps.py  test_coverage_nlp_final.py  test_data_analysis.py  test_data_analysis_lazy_bridge.py  test_data_analysis_pandas_io.py  test_dataset.py  test_diffeq.py  test_edge_misc_numerical.py  test_edge_ml_quantum_linalg.py  test_edge_nlp.py  test_edge_quantum_evaluator_cli.py  test_edge_stats_optimization_signals.py  test_example.py  test_fft2.py  test_graph.py  test_hypothesis.py  test_hypothesis_engine.py  test_hypothesis_tests.py  test_knowledge.py  test_linalg_extended.py  test_linalg_qr_cholesky.py  test_math_utils.py  test_ml_viz.py  test_modeling.py  test_montecarlo.py  test_multi_qubit.py  test_nlp_attention.py  test_nlp_autograd.py  test_nlp_bpe.py  test_nlp_embed.py  (+19 more)
tour_of_numerical_methods/: index.html
tutorials/core_demo/: index.html
tutorials/data_analysis_demo/: index.html
tutorials/diffeq_demo/: index.html
tutorials/fft2_demo/: index.html
tutorials/graph_demo/: index.html
tutorials/hypothesis_demo/: index.html
tutorials/hypothesis_tests_demo/: index.html
tutorials/hypothesis_with_stats_demo/: index.html
tutorials/knowledge_demo/: index.html
tutorials/linalg_demo/: index.html
tutorials/math_utils_demo/: index.html
tutorials/ml_and_viz_demo/: index.html
tutorials/ml_demo/: index.html
tutorials/modeling_demo/: index.html
tutorials/montecarlo_demo/: index.html
tutorials/nlp_attention_demo/: index.html
tutorials/nlp_bpe_demo/: index.html
tutorials/nlp_mini_gpt_demo/: index.html
tutorials/nlp_viz/: index.html
tutorials/numerical_integration_demo/: index.html
tutorials/optimization_demo/: index.html
tutorials/pandas_io_demo/: index.html
tutorials/probability_demo/: index.html
tutorials/quantum_demo/: index.html
tutorials/quick_start/: index.html
tutorials/scientific_demo/: index.html
tutorials/signals_demo/: index.html
tutorials/stats_demo/: index.html
tutorials/time_series_demo/: index.html
(+68 files in other folders)
