[project]
name = "cognitive-discovery-platform"
dynamic = ["version"]
description = "Pure Python computational science platform — quantum simulation, FFT, optimization, probability, statistics, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Furox88", email = "furkanarkn1451@gmail.com"}
]
keywords = ["quantum", "fft", "optimization", "probability", "statistics", "scientific-computing", "signal-processing", "pure-python", "graph-theory", "monte-carlo", "differential-equations", "linear-algebra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Meta-package: every extras group in one install.
# Use as: `pip install cognitive-discovery-platform[all]`
all = [
    "streamlit>=1.30.0",
    "pandas",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
    "build",
    "twine",
    "ipykernel",
    "notebook",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas",
]
test = [
    "pytest>=8.0",
    "pytest-cov",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
    "build",
    "twine",
    "ipykernel",
    "notebook",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
cds = "cds.cli:app"

[project.urls]
Homepage = "https://github.com/Furox88/cognitive-discovery-system"
Repository = "https://github.com/Furox88/cognitive-discovery-system"
Documentation = "https://furox88.github.io/cognitive-discovery-system/"
"PyPI" = "https://pypi.org/project/cognitive-discovery-platform/"
Issues = "https://github.com/Furox88/cognitive-discovery-system/issues"
Changelog = "https://github.com/Furox88/cognitive-discovery-system/releases"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cds"]

# Dynamic version from git tags. `hatch-vcs` reads the most recent 'v*'
# annotated tag and writes src/cds/_version.py at build time. The stub
# _version.py is committed (so mypy can resolve __version__ in fresh
# clones without git history) but gets overwritten during `python -m build`
# and `pip install -e .`. To cut a release: `git tag -a vX.Y.Z -m "..."`
# then `python -m build` — the wheel/sdist filename picks up the tag.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cds/_version.py"

# setuptools_scm options (used internally by hatch-vcs):
# - `no-guess-dev`: never append `.devN+g<sha>` even when the working tree
#   is dirty. The version stays exactly as the tag (e.g. 0.9.0b1). This
#   matches what we want for release builds.
# - `no-local-version`: don't add `+local.X` suffix.
# - `fallback_version`: used when git tags are unavailable (e.g. shallow
#   clones without history). The placeholder src/cds/_version.py mirrors
#   this so mypy has something to resolve against in fresh checkouts.
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["src/cds"]
# Branch coverage is on. The reference cell (Linux + Python 3.12) enforces
# the statement-coverage gate; branch coverage is reported but not gated
# here, because the `cds.stats.hypothesis_tests` numerical helpers
# (`_gser`, `_gcf`) contain for-loops whose natural-end branch is
# mathematically unreachable for convergent inputs. These are validated
# end-to-end via higher-level chi2_sf / gamma_sf tests; forcing branch
# coverage on them would require constructing inputs that defeat
# Numerical Recipes convergence, which adds noise without improving real
# coverage. The CI command uses `coverage report --fail-under=99` to
# enforce the statement gate while branch data is still collected.
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
# Statement coverage is the CI gate. CDS targets 100% statement coverage
# across Linux + Python 3.12 (the reference cell). Other matrix cells
# (3.10, 3.11, Windows, macOS) only report coverage to keep CI fast
# and avoid redundant Codecov uploads; micro-differences in their stdlib
# occasionally surface a 1-statement miss that the 3.12 baseline covers.
fail_under = 99
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
ignore_missing_imports = true
# Mypy is run on both `src/` and `tests/` in CI (see .github/workflows/tests.yml).
# Local pre-commit hook still skips mypy to keep the commit loop fast; CI is the
# gate for test-code type safety.
