[project]
name = "cognitive-discovery-system"
version = "1.1.5"
description = "Pure Python computational science system — quantum simulation, FFT, optimization, probability, statistics, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Furox88", email = "furkanarkn1451@gmail.com"}
]
keywords = ["quantum", "fft", "optimization", "probability", "statistics", "scientific-computing", "signal-processing", "pure-python", "graph-theory", "monte-carlo", "differential-equations", "linear-algebra"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
# Meta-package: every extras group in one install.
# Use as: `pip install cognitive-discovery-system[all]`
all = [
    "streamlit>=1.30.0",
    "pandas",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
    "build",
    "twine",
    "ipykernel",
    "notebook",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "hypothesis>=6.100",
]
dashboard = [
    "streamlit>=1.30.0",
    "pandas",
]
test = [
    "pytest>=8.0",
    "pytest-cov",
]
# Property-based testing. Used only by tests/test_property_invariants.py
# (hypothesis @given strategies exercising algebraic + numerical identities).
# Kept out of the base `test` extra so a plain `pip install ".[test]"` stays
# lean; opt in with `pip install ".[property]"` or via `[all]`.
property = [
    "hypothesis>=6.100",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
    "build",
    "twine",
    "ipykernel",
    "notebook",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
# Promo/asset build tooling. Used only by scripts/build_gif.py,
# scripts/build_video.py, scripts/make_pi_gif.py, and scripts/render_promo.mjs
# to regenerate the README/dashboard promo media. Never imported by the package
# at runtime — the core stays zero-dependency pure Python.
promo = [
    "pillow>=10.0.0",
    "imageio-ffmpeg>=0.5.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
cds = "cds.cli:app"

[project.urls]
Homepage = "https://github.com/Furox88/cognitive-discovery-system"
Repository = "https://github.com/Furox88/cognitive-discovery-system"
Documentation = "https://furox88.github.io/cognitive-discovery-system/"
"PyPI" = "https://pypi.org/project/cognitive-discovery-system/"
Issues = "https://github.com/Furox88/cognitive-discovery-system/issues"
Changelog = "https://github.com/Furox88/cognitive-discovery-system/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cds"]
# PEP 561 marker — tells type checkers / IDEs that the wheel ships
# inline type annotations. Hatchling picks up non-.py files in the
# package dir by default, but declaring it explicitly is safer and
# documents intent.
force-include = { "src/cds/py.typed" = "cds/py.typed" }

# Keep the sdist lean. By default Hatchling ships the whole repo tree,
# which dragged in ~87 MB of promo/render artifacts (assets/_promo_frames/,
# cds_promo.gif/.mp4/.webm) plus node_modules/ — none of which belong in a
# source distribution. We enumerate only what an end user building from
# sdist actually needs: the package source, the test suite, docs source,
# and the project metadata files. See `.gitignore` for the corresponding
# local excludes.
[tool.hatch.build.targets.sdist]
only-include = [
  "src/cds",
  "tests",
  "docs",
  "scripts/publish.py",
  "benchmarks",
  "dashboard",
  "examples",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "CITATION.cff",
  "pyproject.toml",
  "requirements.lock",
  "requirements-dev.lock",
  "mkdocs.yml",
]

# Static version. The release tag is the source of truth — the wheel
# filename reads the git tag. Bump manually before tagging a new
# release, and keep `src/cds/_version.py` in lockstep so mypy +
# `cds --version` see the right value. (Previously we tried
# hatch-vcs + setuptools_scm with `[tool.hatch.vcs] version-scheme =
# "release"`, but hatch-vcs 0.5.0 silently ignored the override and
# produced `0.9.0b5.dev0+g<sha>.d<date>` instead of the clean tag
# version. Static versioning is what shipped.)
#
# Release checklist:
#   1. Bump `version` below AND `__version__` in `src/cds/_version.py`
#   2. Commit, push, wait for CI green
#   3. `git tag -a vX.Y.Z -m "Release vX.Y.Z"`
#   4. `python scripts/publish.py --tag vX.Y.Z`

[tool.ruff]
line-length = 100
target-version = "py310"
# _version.py is auto-generated by hatch-vcs at build time; its content
# is the resolved version string, not hand-written code. Exclude it from
# lint + format so the placeholder we commit (for mypy in fresh clones)
# doesn't get reformatted by CI and break the format --check step.
extend-exclude = ["src/cds/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Resolve `cds` from the source tree, not site-packages. Without this, a
# stray `pip install` of a built wheel (or a stale copy under site-packages)
# would shadow `src/cds/` and tests would silently run against the wrong
# code. `pythonpath` is prepended to `sys.path` ahead of site-packages.
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config"]

[tool.coverage.run]
source = ["src/cds"]
# Branch coverage is on AND gated. The reference cell (Linux + Python 3.12)
# enforces 100% *blended* coverage (statement + branch) via
# `coverage report --fail-under=100`. The two `cds.stats.hypothesis_tests`
# numerical helpers (`_gser`, `_gcf`) contain Numerical-Recipes for-loops
# whose natural-exhaustion arc (loop completes without breaking) is
# mathematically unreachable for every convergent input; those arcs are
# marked `# pragma: no branch` at the `for` site so the loop body still
# counts as executed while the unreachable exit arc is excluded. Every other
# branch is exercised by a real test — no untested branch remains.
branch = true
dynamic_context = "test_function"

[tool.coverage.report]
# Blended coverage (statement + branch) is the CI gate. CDS targets 100%
# blended coverage across Linux + Python 3.12 (the reference cell). Other
# matrix cells (3.10, 3.11, Windows, macOS) only report coverage to keep CI
# fast and avoid redundant Codecov uploads; micro-differences in their stdlib
# occasionally surface a 1-statement miss that the 3.12 baseline covers.
fail_under = 100
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
# No `ignore_missing_imports` here: CDS only depends on PEP 561 typed
# runtime libs (typer, pydantic, rich), all of which ship inline type
# annotations and resolve cleanly under strict mypy. Dropping the global
# escape hatch means a future un-stubbed dependency will surface a real
# error instead of being silently typed as Any.
# Mypy is run on both `src/` and `tests/` in CI (see .github/workflows/tests.yml).
# Local pre-commit hook still skips mypy to keep the commit loop fast; CI is the
# gate for test-code type safety.

# Property-based tests under tests/test_property_invariants.py depend on the
# `hypothesis` library, which lives in the optional `[property]` extra. The
# main CI matrix installs only `[test,dev,docs]` — no hypothesis — so running
# `mypy tests/` there would fail with `import-not-found` on the hypothesis
# imports and, because the missing imports degrade to `Any`, a cascade of
# `untyped-decorator` / `no-any-return` errors on every `@given` site. None of
# that reflects a real type defect; it is purely the cost of mypy seeing a
# module the environment chose not to install.
#
# Rather than weaken the global strict stance (e.g. `ignore_missing_imports`),
# we exclude the file from the default `mypy tests/` run. The file is type-
# checked properly in the dedicated `property-tests` CI job, where
# `pip install ".[property,test]"` makes hypothesis resolvable and `strict`
# mypy runs against it there. See .github/workflows/tests.yml.
exclude = [
    "tests/test_property_invariants\\.py",
]
